--- a/tutorial/0-models-and-events.html
+++ b/tutorial/0-models-and-events.html
@@ -55,6 +55,7 @@ myTweet.set('message', 'Hello, world!');
  * http://backbonejs.org/#Model-get */
 
 // window.alert(YOUR CODE HERE);
+window.alert(myTweet.get('message'));
 
 /* - Backbone EVENTS ----------------------------------------------------------
  * Backbone gives us the ability to listen for events on our models,
@@ -75,17 +76,20 @@ myTweet.set('message', 'Hello, world!');
  * http://backbonejs.org/#Events-on
  */
 
+
+
 /* Listen for our model's `change` event: */
 myTweet.on('change',
   function(/* this event holds information about the change: */ e) {
     // Let ourselves know that something was changed:
     console.info('Something in this tweet model was changed!');
     console.log(e);
-
     // Write code to log the changed attribute:
-    // console.log(YOUR CODE HERE);
+    //console.log(myTweet.get('message'));
+    console.log(myTweet.changedAttributes());
   }
 );
+
 
 /* Backbone works through getters/setters. If you change something on
  * your model as if it were a plain old javascript object,
@@ -97,6 +101,7 @@ myTweet.on('change',
  * and write a one-liner that will make our `change` listener fire: */
 
 // myTweetYOUR CODE HERE;
+  myTweet.set('message', 'yo zach');
 
 /* Once you have the `change` event firing, move on to rendering! */
   </script>
