--- a/tutorial/1-rendering.html
+++ b/tutorial/1-rendering.html
@@ -101,7 +101,10 @@ var Message = Backbone.Model.extend({
      * Putting it into the initialize function let's us be sure that
      * all models that are created will have event listeners on them.
      */
-    this.on(YOUR CODE HERE);
+    this.on('change', function() {
+      renderSomethingOnThePage(this.get('message'));
+    });
+
     /* It is your turn to write the event handler.
      *
      * Make an event listener that will listen for a `change` in this model's
@@ -139,10 +142,10 @@ var Message = Backbone.Model.extend({
 // Let's try it out: 'instantiate' an instance of the class defined above:
 var myNewMessage = new Message();
 
+
+
 // ...and then make a change on that model to see it render
 myNewMessage.set({message: 'someMessage'});
-
-
 /* Once the model is rendering on the `change` event, move on to step 3!
  *
  * So far we have created models by extending Backbone.Model,
